feat: complete IM refactor and CheeseBox updates