@@ -3,76 +3,147 @@ package com.cheeseocean.im.common.core.business.mongo.impl;
 import com.cheeseocean.im.common.api.enums.GroupStatusEnum;
 import com.cheeseocean.im.common.api.enums.GroupTypeEnum;
 import com.cheeseocean.im.common.api.enums.NeedVerificationEnum;
-import com.cheeseocean.im.common.core.business.domain.Group;
+import com.cheeseocean.im.common.api.business.domain.Group;
 import com.cheeseocean.im.common.core.business.mongo.document.group.GroupDoc;
-import com.cheeseocean.im.common.core.business.mongo.repository.GroupMongoRepository;
 import com.cheeseocean.im.common.core.business.repository.GroupRepository;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.mongodb.core.BulkOperations;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.data.mongodb.core.query.Update;
+import org.springframework.util.StringUtils;
 
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * {@link GroupRepository} 的 MongoDB 实现。
  */
 public class GroupRepositoryImpl implements GroupRepository {
 
-    private final GroupMongoRepository groupMongoRepository;
     private final MongoTemplate mongoTemplate;
 
-    public GroupRepositoryImpl(GroupMongoRepository groupMongoRepository,
-                               MongoTemplate mongoTemplate) {
-        this.groupMongoRepository = groupMongoRepository;
+    public GroupRepositoryImpl(MongoTemplate mongoTemplate) {
         this.mongoTemplate = mongoTemplate;
     }
 
-    // ── 读操作 ────────────────────────────────────────────────────────────────
-
     @Override
     public Optional<Group> findById(String groupId) {
-        return groupMongoRepository.findById(groupId).map(this::toDomain);
+        Query query = Query.query(Criteria.where("_id").is(groupId));
+        return Optional.ofNullable(mongoTemplate.findOne(query, GroupDoc.class)).map(this::toDomain);
     }
 
     @Override
     public List<Group> findByIds(List<String> groupIds) {
-        return groupMongoRepository.findAllById(groupIds).stream()
-                .map(this::toDomain)
-                .collect(Collectors.toList());
+        if (groupIds == null || groupIds.isEmpty()) {
+            return List.of();
+        }
+        Query query = Query.query(Criteria.where("_id").in(groupIds));
+        return mongoTemplate.find(query, GroupDoc.class).stream().map(this::toDomain).toList();
     }
 
     @Override
-    public boolean existsById(String groupId) {
-        return groupMongoRepository.existsById(groupId);
-    }
-
-    // ── 写操作 ────────────────────────────────────────────────────────────────
-
-    @Override
-    public void save(Group group) {
-        groupMongoRepository.save(toDoc(group));
+    public void saveAll(List<Group> groups) {
+        if (groups == null || groups.isEmpty()) {
+            return;
+        }
+        // 群资料写入统一走批量 upsert，便于兼容创建和后续资料同步。
+        BulkOperations bulkOperations = mongoTemplate.bulkOps(BulkOperations.BulkMode.UNORDERED, GroupDoc.class);
+        int operations = 0;
+        for (Group group : groups) {
+            if (group == null || !StringUtils.hasText(group.getGroupId())) {
+                continue;
+            }
+            bulkOperations.upsert(
+                    Query.query(Criteria.where("_id").is(group.getGroupId())),
+                    toUpdate(group)
+            );
+            operations++;
+        }
+        if (operations > 0) {
+            bulkOperations.execute();
+        }
     }
 
     @Override
     public void updateFields(String groupId, Map<String, Object> fields) {
+        if (!StringUtils.hasText(groupId) || fields == null || fields.isEmpty()) {
+            return;
+        }
         Query query = Query.query(Criteria.where("_id").is(groupId));
         Update update = new Update();
-        fields.forEach(update::set);
+        fields.forEach((key, value) -> {
+            if (key != null) {
+                update.set(key, value);
+            }
+        });
         mongoTemplate.updateFirst(query, update, GroupDoc.class);
     }
 
     @Override
-    public void disband(String groupId) {
+    public boolean exists(String groupId) {
         Query query = Query.query(Criteria.where("_id").is(groupId));
-        Update update = new Update().set("status", GroupStatusEnum.DISBANDED.getCode());
-        mongoTemplate.updateFirst(query, update, GroupDoc.class);
+        return mongoTemplate.exists(query, GroupDoc.class);
     }
 
-    // ── 转换方法 ─────────────────────────────────────────────────────────────
+    @Override
+    public void updateStatus(String groupId, int status) {
+        updateFields(groupId, Map.of("status", status));
+    }
+
+    @Override
+    public List<Group> pageByKeyword(String keyword, int limit, int offset) {
+        // 搜索默认过滤已解散群，避免客户端再二次过滤无效群。
+        Query query = buildSearchQuery(keyword, null)
+                .with(PageRequest.of(Math.max(0, offset) / pageSize(limit), pageSize(limit), Sort.by(Sort.Direction.DESC, "createTime")));
+        return mongoTemplate.find(query, GroupDoc.class).stream().map(this::toDomain).toList();
+    }
+
+    @Override
+    public long countByKeyword(String keyword) {
+        return mongoTemplate.count(buildSearchQuery(keyword, null), GroupDoc.class);
+    }
+
+    @Override
+    public List<String> findJoinSortedGroupIds(List<String> groupIds) {
+        if (groupIds == null || groupIds.isEmpty()) {
+            return List.of();
+        }
+        // 已加入群列表按群名 + 创建时间稳定排序，方便客户端复用。
+        Query query = buildSearchQuery(null, groupIds)
+                .with(Sort.by(Sort.Order.asc("groupName"), Sort.Order.asc("createTime")));
+        query.fields().include("groupId");
+        return mongoTemplate.find(query, GroupDoc.class).stream().map(GroupDoc::getGroupId).toList();
+    }
+
+    @Override
+    public List<Group> pageJoinedGroups(List<String> groupIds, String keyword, int limit, int offset) {
+        if (groupIds == null || groupIds.isEmpty()) {
+            return List.of();
+        }
+        Query query = buildSearchQuery(keyword, groupIds)
+                .with(PageRequest.of(Math.max(0, offset) / pageSize(limit), pageSize(limit),
+                        Sort.by(Sort.Order.asc("groupName"), Sort.Order.asc("createTime"))));
+        return mongoTemplate.find(query, GroupDoc.class).stream().map(this::toDomain).toList();
+    }
+
+    private Query buildSearchQuery(String keyword, List<String> groupIds) {
+        // joined/search 两条路径都复用同一套状态过滤和关键词匹配规则。
+        Criteria criteria = Criteria.where("status").ne(GroupStatusEnum.DISBANDED.getCode());
+        if (groupIds != null) {
+            criteria = criteria.and("groupId").in(groupIds);
+        }
+        if (StringUtils.hasText(keyword)) {
+            criteria = new Criteria().andOperator(
+                    criteria,
+                    Criteria.where("groupName").regex(keyword, "i")
+            );
+        }
+        return Query.query(criteria);
+    }
 
     private Group toDomain(GroupDoc doc) {
         Group group = new Group();
@@ -80,7 +151,7 @@ public class GroupRepositoryImpl implements GroupRepository {
         group.setGroupName(doc.getGroupName());
         group.setNotification(doc.getNotification());
         group.setIntroduction(doc.getIntroduction());
-        group.setFaceUrl(doc.getFaceUrl());
+        group.setAvatarUrl(doc.getAvatarUrl());
         group.setEx(doc.getEx());
         group.setStatus(GroupStatusEnum.fromCode(doc.getStatus()));
         group.setCreatorUserId(doc.getCreatorUserId());
@@ -94,23 +165,26 @@ public class GroupRepositoryImpl implements GroupRepository {
         return group;
     }
 
-    private GroupDoc toDoc(Group group) {
-        GroupDoc doc = new GroupDoc();
-        doc.setGroupId(group.getGroupId());
-        doc.setGroupName(group.getGroupName());
-        doc.setNotification(group.getNotification());
-        doc.setIntroduction(group.getIntroduction());
-        doc.setFaceUrl(group.getFaceUrl());
-        doc.setEx(group.getEx());
-        doc.setStatus(group.getStatus() != null ? group.getStatus().getCode() : GroupStatusEnum.NORMAL.getCode());
-        doc.setCreatorUserId(group.getCreatorUserId());
-        doc.setGroupType(group.getGroupType() != null ? group.getGroupType().getCode() : 0);
-        doc.setNeedVerification(group.getNeedVerification() != null ? group.getNeedVerification().getCode() : 0);
-        doc.setLookMemberInfo(group.getLookMemberInfo());
-        doc.setApplyMemberFriend(group.getApplyMemberFriend());
-        doc.setNotificationUpdateTime(group.getNotificationUpdateTime());
-        doc.setNotificationUserId(group.getNotificationUserId());
-        doc.setCreateTime(group.getCreateTime());
-        return doc;
+    private Update toUpdate(Group group) {
+        return new Update()
+                .set("groupId", group.getGroupId())
+                .set("groupName", group.getGroupName())
+                .set("notification", group.getNotification())
+                .set("introduction", group.getIntroduction())
+                .set("faceUrl", group.getAvatarUrl())
+                .set("ex", group.getEx())
+                .set("status", group.getStatus() != null ? group.getStatus().getCode() : GroupStatusEnum.NORMAL.getCode())
+                .set("creatorUserId", group.getCreatorUserId())
+                .set("groupType", group.getGroupType() != null ? group.getGroupType().getCode() : 0)
+                .set("needVerification", group.getNeedVerification() != null ? group.getNeedVerification().getCode() : 0)
+                .set("lookMemberInfo", group.getLookMemberInfo())
+                .set("applyMemberFriend", group.getApplyMemberFriend())
+                .set("notificationUpdateTime", group.getNotificationUpdateTime())
+                .set("notificationUserId", group.getNotificationUserId())
+                .setOnInsert("createTime", group.getCreateTime());
+    }
+
+    private static int pageSize(int limit) {
+        return Math.max(1, limit <= 0 ? 50 : limit);
     }
 }
