@@ -1,8 +1,7 @@
 package com.cheeseocean.im.common.core.business.mongo.impl;
 
-import com.cheeseocean.im.common.core.business.domain.UserConversationSyncPoint;
+import com.cheeseocean.im.common.api.business.domain.UserConversationSyncPoint;
 import com.cheeseocean.im.common.core.business.mongo.document.conversation.UserConversationSyncPointDoc;
-import com.cheeseocean.im.common.core.business.mongo.repository.UserConversationSyncPointMongoRepository;
 import com.cheeseocean.im.common.core.business.repository.UserConversationSyncPointRepository;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Criteria;
@@ -23,65 +22,91 @@ import java.util.stream.Collectors;
  */
 public class UserConversationSyncPointRepositoryImpl implements UserConversationSyncPointRepository {
 
-    private final UserConversationSyncPointMongoRepository mongoRepository;
     private final MongoTemplate mongoTemplate;
 
-    public UserConversationSyncPointRepositoryImpl(
-            UserConversationSyncPointMongoRepository mongoRepository,
-            MongoTemplate mongoTemplate) {
-        this.mongoRepository = mongoRepository;
+    public UserConversationSyncPointRepositoryImpl(MongoTemplate mongoTemplate) {
         this.mongoTemplate = mongoTemplate;
-    }
-
-    // ── 写操作 ────────────────────────────────────────────────────────────────
-
-    @Override
-    public void createIfAbsent(String userId, String conversationId) {
-        String id = docId(userId, conversationId);
-        Query query = Query.query(Criteria.where("_id").is(id));
-        Update update = new Update()
-                .setOnInsert("_id",            id)
-                .setOnInsert("userId",          userId)
-                .setOnInsert("conversationId",  conversationId)
-                .setOnInsert("maxSeq",          0L)
-                .setOnInsert("minSeq",          0L)
-                .setOnInsert("readSeq",         0L);
-        mongoTemplate.upsert(query, update, UserConversationSyncPointDoc.class);
     }
 
     @Override
     public void updateReadSeq(String userId, String conversationId, long readSeq) {
-        Query query = Query.query(Criteria.where("_id").is(docId(userId, conversationId)));
-        mongoTemplate.updateFirst(query, new Update().set("readSeq", readSeq),
-                UserConversationSyncPointDoc.class);
-    }
-
-    @Override
-    public void updateMaxSeq(String userId, String conversationId, long maxSeq) {
         String id = docId(userId, conversationId);
-        Query query = Query.query(Criteria.where("_id").is(id));
+        // readSeq 只允许前进，避免异步乱序写把已读水位回退。
+        Query query = Query.query(new Criteria().andOperator(
+                Criteria.where("_id").is(id),
+                new Criteria().orOperator(
+                        Criteria.where("readSeq").lt(readSeq),
+                        Criteria.where("readSeq").exists(false)
+                )
+        ));
         Update update = new Update()
-                .setOnInsert("_id",           id)
-                .setOnInsert("userId",         userId)
+                .setOnInsert("_id", id)
+                .setOnInsert("userId", userId)
                 .setOnInsert("conversationId", conversationId)
-                .setOnInsert("minSeq",         0L)
-                .setOnInsert("readSeq",        0L)
-                .set("maxSeq", maxSeq);
+                .setOnInsert("maxSeq", 0L)
+                .setOnInsert("minSeq", 0L)
+                .set("readSeq", readSeq);
         mongoTemplate.upsert(query, update, UserConversationSyncPointDoc.class);
     }
 
     @Override
-    public void updateMinSeq(String userId, String conversationId, long minSeq) {
-        Query query = Query.query(Criteria.where("_id").is(docId(userId, conversationId)));
-        mongoTemplate.updateFirst(query, new Update().set("minSeq", minSeq),
-                UserConversationSyncPointDoc.class);
+    public long getMaxSeq(String userId, String conversationId) {
+        return find(userId, conversationId)
+                .map(UserConversationSyncPoint::getMaxSeq)
+                .orElse(0L);
     }
 
-    // ── 读操作 ────────────────────────────────────────────────────────────────
+    @Override
+    public void updateMaxSeq(String userId, String conversationId, long maxSeq) {
+        upsertSeqField(userId, conversationId, "maxSeq", maxSeq, "minSeq", 0L, "readSeq", 0L);
+    }
+
+    @Override
+    public long getMinSeq(String userId, String conversationId) {
+        return find(userId, conversationId)
+                .map(UserConversationSyncPoint::getMinSeq)
+                .orElse(0L);
+    }
+
+    @Override
+    public void updateMinSeq(String userId, String conversationId, long minSeq) {
+        upsertSeqField(userId, conversationId, "minSeq", minSeq, "maxSeq", 0L, "readSeq", 0L);
+    }
+
+    @Override
+    public long getReadSeq(String userId, String conversationId) {
+        return find(userId, conversationId)
+                .map(UserConversationSyncPoint::getReadSeq)
+                .orElse(0L);
+    }
+
+    @Override
+    public Map<String, Long> getReadSeqMap(String userId, List<String> conversationIds) {
+        if (conversationIds == null || conversationIds.isEmpty()) {
+            return Map.of();
+        }
+        List<String> dedupedIds = dedupeConversationIds(conversationIds);
+        if (dedupedIds.isEmpty()) {
+            return Map.of();
+        }
+        // 缺失记录按 0L 填充，调用方不需要再自己补默认值。
+        Map<String, Long> readSeqMap = dedupedIds.stream()
+                .collect(Collectors.toMap(
+                        conversationId -> conversationId,
+                        conversationId -> 0L,
+                        (left, right) -> left,
+                        LinkedHashMap::new
+                ));
+        Query query = Query.query(Criteria.where("userId").is(userId).and("conversationId").in(dedupedIds));
+        mongoTemplate.find(query, UserConversationSyncPointDoc.class)
+                .forEach(doc -> readSeqMap.put(doc.getConversationId(), doc.getReadSeq()));
+        return readSeqMap;
+    }
 
     @Override
     public Optional<UserConversationSyncPoint> find(String userId, String conversationId) {
-        return mongoRepository.findByUserIdAndConversationId(userId, conversationId)
+        Query query = Query.query(Criteria.where("userId").is(userId).and("conversationId").is(conversationId));
+        return Optional.ofNullable(mongoTemplate.findOne(query, UserConversationSyncPointDoc.class))
                 .map(this::toDomain);
     }
 
@@ -90,48 +115,76 @@ public class UserConversationSyncPointRepositoryImpl implements UserConversation
         if (conversationIds == null || conversationIds.isEmpty()) {
             return List.of();
         }
-
-        List<String> dedupedIds = conversationIds.stream()
-                .filter(Objects::nonNull)
-                .filter(id -> !id.isBlank())
-                .collect(Collectors.collectingAndThen(
-                        Collectors.toCollection(LinkedHashSet::new),
-                        ArrayList::new
-                ));
+        List<String> dedupedIds = dedupeConversationIds(conversationIds);
         if (dedupedIds.isEmpty()) {
             return List.of();
         }
-
-        Map<String, UserConversationSyncPoint> ranges = mongoRepository
-                .findByUserIdAndConversationIdIn(userId, dedupedIds)
+        // 保留入参顺序，便于上层按原会话列表回填未读/水位信息。
+        Query query = Query.query(Criteria.where("userId").is(userId).and("conversationId").in(dedupedIds));
+        Map<String, UserConversationSyncPoint> syncPointMap = mongoTemplate.find(query, UserConversationSyncPointDoc.class)
                 .stream()
                 .map(this::toDomain)
                 .collect(Collectors.toMap(
                         UserConversationSyncPoint::getConversationId,
-                        range -> range,
+                        syncPoint -> syncPoint,
                         (left, right) -> left,
                         LinkedHashMap::new
                 ));
-        return dedupedIds.stream().map(ranges::get).filter(java.util.Objects::nonNull).toList();
+        return dedupedIds.stream()
+                .map(syncPointMap::get)
+                .filter(Objects::nonNull)
+                .toList();
     }
 
     @Override
     public List<UserConversationSyncPoint> findByUserId(String userId) {
-        return mongoRepository.findByUserId(userId)
-                .stream().map(this::toDomain).collect(Collectors.toList());
+        Query query = Query.query(Criteria.where("userId").is(userId));
+        return mongoTemplate.find(query, UserConversationSyncPointDoc.class).stream()
+                .map(this::toDomain)
+                .toList();
     }
 
-    // ── 转换方法 ─────────────────────────────────────────────────────────────
+    private void upsertSeqField(
+            String userId,
+            String conversationId,
+            String seqField,
+            long seq,
+            String companionFieldA,
+            long companionValueA,
+            String companionFieldB,
+            long companionValueB) {
+        String id = docId(userId, conversationId);
+        // 任何单一水位写入都顺手补齐其余默认字段，保证文档结构稳定。
+        Query query = Query.query(Criteria.where("_id").is(id));
+        Update update = new Update()
+                .setOnInsert("_id", id)
+                .setOnInsert("userId", userId)
+                .setOnInsert("conversationId", conversationId)
+                .setOnInsert(companionFieldA, companionValueA)
+                .setOnInsert(companionFieldB, companionValueB)
+                .set(seqField, seq);
+        mongoTemplate.upsert(query, update, UserConversationSyncPointDoc.class);
+    }
 
     private UserConversationSyncPoint toDomain(UserConversationSyncPointDoc doc) {
-        UserConversationSyncPoint range = new UserConversationSyncPoint();
-        range.setId(doc.getId());
-        range.setUserId(doc.getUserId());
-        range.setConversationId(doc.getConversationId());
-        range.setMaxSeq(doc.getMaxSeq());
-        range.setMinSeq(doc.getMinSeq());
-        range.setReadSeq(doc.getReadSeq());
-        return range;
+        UserConversationSyncPoint syncPoint = new UserConversationSyncPoint();
+        syncPoint.setId(doc.getId());
+        syncPoint.setUserId(doc.getUserId());
+        syncPoint.setConversationId(doc.getConversationId());
+        syncPoint.setReadSeq(doc.getReadSeq());
+        syncPoint.setMaxSeq(doc.getMaxSeq());
+        syncPoint.setMinSeq(doc.getMinSeq());
+        return syncPoint;
+    }
+
+    private static List<String> dedupeConversationIds(List<String> conversationIds) {
+        return conversationIds.stream()
+                .filter(Objects::nonNull)
+                .filter(conversationId -> !conversationId.isBlank())
+                .collect(Collectors.collectingAndThen(
+                        Collectors.toCollection(LinkedHashSet::new),
+                        ArrayList::new
+                ));
     }
 
     private static String docId(String userId, String conversationId) {
